渲染页面前判断storage中是否有accessToken

--- a/src/app/layout/style.less
+++ b/src/app/layout/style.less
@@ -104,4 +104,14 @@
   }
 }
 
+.menu_item {
+  display: flex;
+  flex-direction: row;
+
+  i {
+    min-width: 12px;
+    margin-right: 8px;
+  }
+}
+
 @import 'mobile.less';
