--- a/src/app/post/style.less
+++ b/src/app/post/style.less
@@ -167,6 +167,10 @@
 @media screen and (max-width:720px) {
   .post {
     width: 100%;
-    padding: 45px 15px 15px 15px;
+    padding-top: 25px;
+
+    .tit {
+      font-size: 20px;
+    }
   }
 }
