--- a/src/app/sendPost/style.less
+++ b/src/app/sendPost/style.less
@@ -1,6 +1,24 @@
-.sendPost {
+:global {
+  .sendPost {
+    padding-bottom: 25px;
+    max-width: 700px;
+    margin: auto;
 
-  .tit {
-    height: 55px;
+    .tit {
+      margin-top: 30px;
+    }
+
+    .editor {
+      margin: 25px 0;
+      border: 1px solid #d9d9d9;
+
+      .bf-content {
+        height: 350px;
+      }
+
+      .bf-controlbar {
+        box-shadow: inset 0 -1px 0 0 #d9d9d9;
+      }
+    }
   }
 }
