--- a/src/app/post/style.less
+++ b/src/app/post/style.less
@@ -174,3 +174,43 @@
     }
   }
 }
+
+:global {
+  .braft_content {
+    box-sizing: border-box;
+    width: 1000px;
+    max-width: 100%;
+    min-height: 100%;
+    margin: 0 auto;
+    padding: 30px 20px;
+    overflow: hidden;
+    background-color: #fff;
+    border-right: solid 1px #eee;
+    border-left: solid 1px #eee;
+  }
+
+  .braft_content img,
+  .braft_content audio,
+  .braft_content video {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .braft_content p {
+    white-space: pre-wrap;
+    min-height: 1em;
+  }
+
+  .braft_content pre {
+    padding: 15px;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+  }
+
+  .braft_content blockquote {
+    margin: 0;
+    padding: 15px;
+    background-color: #f1f1f1;
+    border-left: 3px solid #d1d1d1;
+  }
+}
