--- a/src/app/layout/style.less
+++ b/src/app/layout/style.less
@@ -53,6 +53,7 @@
       .left_login {
         display: flex;
         flex-direction: row;
+        align-items: center;
 
         .logo {
           height: 45px;
@@ -79,7 +80,7 @@
             transition: all .45s;
 
             &:focus {
-              width: 130px;
+              width: 100px;
             }
           }
 
@@ -93,6 +94,12 @@
       .right_login {
         a {
           margin-left: 25px;
+
+          img {
+            width: 28px;
+            height: 28px;
+            border-radius: 50%;
+          }
         }
       }
     }
