--- a/src/app/setting/style.less
+++ b/src/app/setting/style.less
@@ -33,6 +33,16 @@
           width: 100%;
           height: 100%;
         }
+
+        input.selectImg {
+          position: relative;
+          top: -100%;
+          padding: 0;
+          height: 100%;
+          opacity: 0;
+          z-index: 11;
+          cursor: pointer;
+        }
       }
 
       input {
