--- a/src/app/post/style.less
+++ b/src/app/post/style.less
@@ -159,6 +159,67 @@
             }
           }
         }
+
+        .reply_to_comment {
+          padding-left: 25px;
+          border-left: 3px solid #666;
+          margin-top: 15px;
+
+          ._item {
+            display: flex;
+            flex-direction: column;
+            padding: 10px 0;
+            border-bottom: 1px solid #f5f5f5;
+
+            .top {
+              display: flex;
+              flex-direction: row;
+              flex-wrap: wrap;
+
+
+              a {
+                color: green;
+                margin-right: 10px;
+
+                &:nth-of-type(2) {
+                  margin-left: 10px;
+                }
+
+              }
+
+              ._con {
+                color: #333;
+                min-width: 100%;
+                margin-top: 5px;
+              }
+
+            }
+
+            .bottom {
+              margin-top: 5px;
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              color: #999;
+              font-size: 12px;
+
+              span._date {
+                margin-right: 10px;
+              }
+
+              ._reply_btn {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                cursor: pointer;
+
+                span {
+                  margin-left: 5px;
+                }
+              }
+            }
+          }
+        }
       }
     }
   }
