--- a/src/app/layout/style.less
+++ b/src/app/layout/style.less
@@ -84,6 +84,11 @@
             }
           }
 
+          a {
+            color: #999;
+            text-decoration: none;
+          }
+
           i.iconfont {
             cursor: pointer;
           }
