--- a/src/app/setting/style.less
+++ b/src/app/setting/style.less
@@ -17,13 +17,18 @@
     }
 
     .con {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
 
       .default {
         text-align: right;
-        color: #999;
+        color: #ccc;
+        font-size: 12px;
       }
 
       .avatar {
+        margin-left: 10px;
         width: 40px;
         height: 40px;
         border-radius: 50%;
