--- a/src/app/profile/style.less
+++ b/src/app/profile/style.less
@@ -36,6 +36,13 @@
       }
     }
 
+    .operations {
+      display: flex;
+      flex-direction: row;
+      margin-top: 15px;
+      justify-content: center;
+    }
+
   }
 
   .post {
