--- a/src/app/search/style.less
+++ b/src/app/search/style.less
@@ -33,6 +33,8 @@
   .tit {
     font-size: 18px;
     color: #969696;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .desc {
@@ -40,6 +42,7 @@
     font-size: 13px;
     line-height: 24px;
     color: #999;
+    overflow: hidden;
   }
 
   .bottom {
