--- a/src/app/layout/style.less
+++ b/src/app/layout/style.less
@@ -11,7 +11,7 @@
 
   a {
     text-decoration: none;
-    color: #666;
+    color: #666 !important;
   }
 
   a:hover {
@@ -104,6 +104,43 @@
             width: 28px;
             height: 28px;
             border-radius: 50%;
+          }
+        }
+
+        .user_menu {
+          position: relative;
+
+          .avatar {
+            width: 28px;
+            height: 28px;
+            border-radius: 50%;
+            cursor: pointer;
+          }
+
+          .menu_list {
+            position: absolute;
+            right: 0;
+            top: 100%;
+            display: flex;
+            flex-direction: column;
+            background-color: #fff;
+            box-shadow: 0 0 4px #ccc;
+
+            li {
+              padding: 5px 10px;
+              min-width: 105px;
+
+              a {
+                margin-left: 0 !important;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+
+                i {
+                  margin-right: 10px;
+                }
+              }
+            }
           }
         }
       }
