邮箱绑定和邮箱登录

--- a/src/app/register/style.less
+++ b/src/app/register/style.less
@@ -1,8 +1,12 @@
-.register{
+.register {
 
-    h1{text-align: center;margin-top:20px;}
-    ._box{
-        max-width:300px;
-        margin:auto;
+    h1 {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    ._box {
+        max-width: 300px;
+        margin: auto;
     }
 }
