--- a/src/app/layout/style.less
+++ b/src/app/layout/style.less
@@ -151,6 +151,11 @@
     width: 960px;
     margin: auto;
   }
+
+  .sendState {
+    font-size: 12px;
+    cursor: pointer;
+  }
 }
 
 .menu_item {
