锚点文章二级三级缩进

--- a/src/app/post/style.less
+++ b/src/app/post/style.less
@@ -2,6 +2,19 @@
   width: 620px;
   margin: auto;
   padding-top: 45px;
+  position: relative;
+
+  .anchor {
+    position: absolute;
+    right: -230px;
+    top: 0;
+    width: 200px;
+
+    .name {
+      color: #999;
+      font-size: 12px;
+    }
+  }
 
   .tit {
     color: #333;
