--- a/src/app/home/style.less
+++ b/src/app/home/style.less
@@ -2,7 +2,9 @@
   position: relative;
 
   .left {
-    width: 623px;
+    width: 650px;
+    background-color:#fff;
+    padding:0 20px;
   }
 
   .right {
@@ -10,15 +12,28 @@
     top: 0;
     right: 0;
     width: 280px;
-    padding-top: 20px;
 
     .adv {
       display: flex;
       flex-direction: row;
       justify-content: center;
       align-items: center;
-      height: 200px;
-      background-color: #e2e2e2;
+      padding:10px 20px;
+      background-color: #fff;
+
+      img{
+        width:100%;
+      }
+    }
+
+    .opensource{
+      padding:10px 20px;
+      background-color:#fff;
+      margin-bottom:20px;
+
+      i{
+        margin-right:5px;
+      }
     }
   }
 
@@ -27,7 +42,7 @@
 .card {
   display: flex;
   flex-direction: column;
-  padding: 20px 0;
+  padding:20px 0;
   border-bottom: 1px solid #f0f0f0;
 
   .tit {
