--- a/src/app/layout/style.less
+++ b/src/app/layout/style.less
@@ -24,7 +24,7 @@
   }
 
   body {
-    background-color: #fff;
+    background-color: #f2f2f2;
     height: auto;
   }
 
@@ -149,12 +149,25 @@
 
   .container {
     width: 960px;
-    margin: auto;
+    margin:20px auto;
+    background-color:#fff;
+
+    &.index{
+      background:none;
+    }
   }
 
   .sendState {
     font-size: 12px;
     cursor: pointer;
+  }
+
+  .radius{
+    border-radius: 4px;
+  }
+
+  .bg_white{
+    background-color:#fff;
   }
 }
 
