--- a/src/app/notification/style.less
+++ b/src/app/notification/style.less
@@ -1,7 +1,5 @@
 .notification {
-  max-width: 650px;
-  margin: 20px auto;
-
+  padding:20px;
 
   .single_item {
     border-bottom: 1px solid #e6e6e6;
