--- a/src/app/post/style.less
+++ b/src/app/post/style.less
@@ -1,12 +1,12 @@
 .post {
-  width: 620px;
-  margin: auto;
-  padding-top: 45px;
+  padding:20px;
+  padding-right:220px;
+  padding-top: 25px;
   position: relative;
 
   .anchor {
     position: absolute;
-    right: -230px;
+    right: 0;
     top: 0;
     width: 200px;
 
@@ -243,6 +243,7 @@
   .post {
     width: 100%;
     padding-top: 25px;
+    overflow: hidden;
 
     .tit {
       font-size: 20px;
