--- a/src/app/sendPost/style.less
+++ b/src/app/sendPost/style.less
@@ -1,11 +1,9 @@
 :global {
   .sendPost {
-    padding-bottom: 25px;
-    max-width: 700px;
-    margin: auto;
+    padding:20px;
 
     .tit {
-      margin-top: 30px;
+      display: block;
     }
 
     .editor {
