修复展示文章页的手机锚点挡住文章的问题

--- a/src/app/post/style.less
+++ b/src/app/post/style.less
@@ -1,6 +1,6 @@
 .post {
-  padding:20px;
-  padding-right:220px;
+  padding: 20px;
+  padding-right: 220px;
   padding-top: 25px;
   position: relative;
 
@@ -242,11 +242,16 @@
 @media screen and (max-width:720px) {
   .post {
     width: 100%;
+    padding: 0;
     padding-top: 25px;
     overflow: hidden;
 
     .tit {
       font-size: 20px;
+    }
+
+    .anchor {
+      display: none;
     }
   }
 }
