--- a/src/app/home/mobile.less
+++ b/src/app/home/mobile.less
@@ -1,3 +1,6 @@
+.mobile-post{
+  display: none;
+}
 @media screen and (max-width:720px) {
   .home {
     position: relative;
@@ -9,6 +12,49 @@
     .right {
       display: none;
     }
-
   }
+}
+
+:global{
+  // mobile-post
+  .mobile-post{
+    display: block!important;
+    position: fixed;
+    bottom:20px;
+    right:20px;
+    z-index:20;
+    width:50px;
+    height:50px;
+    border-radius: 50%;
+    overflow: hidden;
+
+    .post-btn{
+      background: linear-gradient(to right, #6d90fc, #426ee9);
+      -webkit-background-clip: text;
+      color: transparent;
+    }
+  }
+
+  .drawerPost{
+    .ant-drawer-content-wrapper{
+      overflow: hidden;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+    } 
+
+    .closeDrawer{
+      margin-top:20px;
+    }
+
+    .post-btn-group{
+      ._btn{
+        flex-direction: column;
+
+        &:nth-of-type(1){
+          margin-right:120px;
+        }
+      }
+    }
+  }
+  // mobile post
 }
