--- a/src/app/home/mobile.less
+++ b/src/app/home/mobile.less
@@ -20,16 +20,17 @@
   .mobile-post{
     display: block!important;
     position: fixed;
-    bottom:20px;
+    bottom:84px;
     right:20px;
     z-index:20;
     width:50px;
     height:50px;
     border-radius: 50%;
     overflow: hidden;
+    line-height: 1;
 
     .post-btn{
-      background: linear-gradient(to right, #6d90fc, #426ee9);
+      background: linear-gradient(to right, #ecccac, #e3a86c);
       -webkit-background-clip: text;
       color: transparent;
     }
@@ -57,4 +58,10 @@
     }
   }
   // mobile post
+
+
+  // flex
+  .flex{display: flex;}
+  .fxc{justify-content: center;}
+  .fyc{align-items: center;}
 }
