:lipstick: 修复样式问题

--- a/src/app/home/mobile.less
+++ b/src/app/home/mobile.less
@@ -20,14 +20,15 @@
   .mobile-post{
     display: block!important;
     position: fixed;
-    bottom:84px;
-    right:20px;
+    bottom: 30px;
+    right: 30px;
     z-index:20;
     width:50px;
     height:50px;
     border-radius: 50%;
     overflow: hidden;
     line-height: 1;
+    background-color:#fff;
 
     .post-btn{
       background: linear-gradient(to right, #ecccac, #e3a86c);
