--- a/src/app/layout/style.less
+++ b/src/app/layout/style.less
@@ -77,7 +77,7 @@
             height: 100%;
             background: none;
 
-            transition: all .45s;
+            transition: all 0.45s;
 
             &:focus {
               width: 100px;
@@ -93,7 +93,6 @@
             cursor: pointer;
           }
         }
-
       }
 
       .right_login {
@@ -149,11 +148,11 @@
 
   .container {
     width: 960px;
-    margin:20px auto;
-    background-color:#fff;
+    margin: 20px auto;
+    background-color: #fff;
 
-    &.index{
-      background:none;
+    &.index {
+      background: none;
     }
   }
 
@@ -162,12 +161,54 @@
     cursor: pointer;
   }
 
-  .radius{
+  .radius {
     border-radius: 4px;
   }
 
-  .bg_white{
-    background-color:#fff;
+  .bg_white {
+    background-color: #fff;
+  }
+
+  .iconFont {
+    width: 1em;
+    height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+  }
+
+  .flex {
+    display: flex;
+
+    &.jbc {
+      justify-content: space-between;
+    }
+
+    &.jcc {
+      justify-content: center;
+    }
+
+    &.aic {
+      align-items: center;
+    }
+
+    &.ais {
+      align-items: flex-start;
+    }
+
+    &.aie {
+      align-items: flex-end;
+    }
+
+    &.fdc {
+      flex-direction: column;
+    }
+    &.fdr {
+      flex-direction: row;
+    }
+    &.fwp {
+      flex-wrap: wrap;
+    }
   }
 }
 
@@ -181,4 +222,4 @@
   }
 }
 
-@import 'mobile.less';
+@import "mobile.less";
